# Transcription-service

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: sonarcloud.yml
src/application/mappers/: blob_file_reference_mapper.py  evaluation_job_mapper.py  files_processing_enrichment_mapper.py  service_bus_job_mapper.py  transcription_job_mapper.py
src/application/parsers/: evaluation_json.py  xlsx_manifest_reader.py
src/application/validators/: evaluation_job.py  transcription_job.py
src/config/: dependencies.py  logger.py  settings.py
src/domain/entities/: blob_file_reference_entity.py  call_processing_entity.py  document_generation_job_entity.py  evaluation_job_entity.py  files_evaluation_enrichment_entity.py  files_processing_entity.py  files_xlsx_enrichment_entity.py  initiative_entity.py  transcription_job_entity.py
src/domain/exceptions/: base.py  evaluation_exceptions.py  ingestion_exceptions.py  processing_exceptions.py  transcription_exceptions.py
src/domain/value_objects/: call_processing_status.py  files_processing_status.py
src/infrastructure/exceptions/: ai_gateway_exceptions.py  base.py  blob_storage_exceptions.py  mongodb_exceptions.py  service_bus_exceptions.py
src/infrastructure/mappers/: call_processing_mapper.py  files_processing_mapper.py  initiative_mapper.py
src/infrastructure/utils/: extract_blob_event_info.py  (+2 more)
src/presentation/: main.py
tests/integration/: test_evaluation_flow.py  test_ingestion_flow.py  test_transcription_flow.py
(+78 files in other folders)
